--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
   <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-  <h1>Part Store</h1>
-  <p><a href="/home.html" style="font-size:14px">← Til Hjem / Oversikt</a></p>
+  <div class="container">
+    <h1>Part Store</h1>
+    <p><a class="muted-link" href="/home.html" style="font-size:14px">← Til Hjem / Oversikt</a></p>
 
   <section>
     <h2>Registrer lokasjon</h2>
@@ -51,6 +52,7 @@
     <div id="scan-result"></div>
   </section>
 
-  <script src="/app.js"></script>
+    <script src="/app.js"></script>
+  </div>
 </body>
 </html>
