--- a/public/mobile.html
+++ b/public/mobile.html
@@ -27,28 +27,56 @@
     </div>
 
     <div id="main-screen" class="hidden">
-  <!-- ngrok seksjon fjernet -->
       <div class="center">
-        <label>Velg eller skann lokasjon</label>
+        <label>Aktiv lokasjon</label>
       </div>
-      <div style="display:flex;gap:8px;margin-top:8px">
+      <div style="display:flex;gap:8px;margin-top:4px;align-items:center">
         <select id="loc-select" style="flex:1"></select>
-        <button id="scan-loc" class="btn">Skann lokasjon</button>
+        <button id="scan-loc" class="btn" style="flex:0 0 auto">Skann lokasjon</button>
       </div>
 
-      <div id="scanner-area" style="margin-top:12px">
-        <div id="video"></div>
-        <div class="controls">
-          <button id="start-scan" class="btn">Start skanning</button>
-          <button id="stop-scan" class="btn">Stopp</button>
-          <button id="manual-add" class="btn">Manuell registrering</button>
+      <div style="display:flex;gap:8px;margin-top:12px;flex-wrap:wrap">
+        <button id="scan-part" class="btn">Skann del</button>
+        <button id="manual-add" class="btn">Manuell del</button>
+        <button id="stop-scan" class="btn" disabled>Stopp</button>
+      </div>
+
+      <div id="scanner-area" style="margin-top:10px">
+        <div id="video" style="aspect-ratio:16/9; background:#000;border-radius:8px;display:flex;align-items:center;justify-content:center;color:#777;font-size:14px">Ingen aktiv skann</div>
+        <div id="scan-status" class="muted" style="margin-top:6px"></div>
+      </div>
+
+      <div id="movement-panel" class="hidden" style="margin-top:14px;border:1px solid #e2e2e2;padding:12px;border-radius:8px;background:#fff">
+        <h3 style="margin:0 0 8px 0;font-size:16px">Registrer bevegelse</h3>
+        <div style="display:flex;flex-direction:column;gap:8px">
+          <div>
+            <label style="font-size:12px">Del</label>
+            <input id="mv-part" readonly style="width:100%;background:#f5f5f5">
+          </div>
+          <div style="display:flex;gap:12px">
+            <div style="flex:1">
+              <label style="font-size:12px">Antall</label>
+              <input id="mv-qty" type="number" value="1" min="1" style="width:100%">
+            </div>
+            <div style="flex:1">
+              <label style="font-size:12px">Retning</label>
+              <select id="mv-action" style="width:100%">
+                <option value="in">INN</option>
+                <option value="out">UT</option>
+              </select>
+            </div>
+          </div>
+          <div style="display:flex;gap:8px">
+            <button id="mv-submit" class="btn" style="flex:1">Lagre</button>
+            <button id="mv-cancel" class="btn danger" style="flex:1">Avbryt</button>
+          </div>
+          <div id="mv-message" class="muted" style="font-size:12px"></div>
         </div>
-        <div id="scan-status" class="muted" style="margin-top:8px"></div>
       </div>
 
-      <div style="margin-top:12px">
-        <h3>Siste skann</h3>
-        <div id="last-scan">Ingen</div>
+      <div style="margin-top:16px">
+        <h3 style="margin:0 0 4px 0;font-size:16px">Logg</h3>
+        <div id="last-scan" style="font-size:13px;color:#333">Ingen</div>
       </div>
     </div>
 
