feat: add mobile scanner debug log + permission checks

--- a/public/mobile.html
+++ b/public/mobile.html
@@ -78,6 +78,11 @@
         <h3 style="margin:0 0 4px 0;font-size:16px">Logg</h3>
         <div id="last-scan" style="font-size:13px;color:#333">Ingen</div>
       </div>
+
+      <div style="margin-top:12px">
+        <button id="toggle-debug" class="btn small" type="button">Debug</button>
+        <div id="debug-log" class="muted" style="display:none;margin-top:6px;font-size:11px;white-space:pre-wrap;max-height:140px;overflow:auto;border:1px solid #eee;padding:6px;border-radius:6px;background:#fafafa"></div>
+      </div>
     </div>
 
   </div>
