feat: android camera preflight + test camera button

--- a/public/mobile.html
+++ b/public/mobile.html
@@ -41,6 +41,7 @@
         <button id="scan-part" class="btn">Skann del</button>
         <button id="manual-add" class="btn">Manuell del</button>
         <button id="stop-scan" class="btn" disabled>Stopp</button>
+  <button id="test-camera" class="btn" type="button">Test kamera</button>
       </div>
 
       <div id="scanner-area" style="margin-top:10px">
