--- a/public/home.html
+++ b/public/home.html
@@ -18,7 +18,7 @@
   <nav class="portal-nav">
     <a href="/home.html" class="active">Hjem</a>
     <a href="/index.html">Part Store</a>
-    <a class="muted-link" style="opacity:.55;pointer-events:none">Asset Tracking (kommer)</a>
+    <a href="/location-barcodes.html">Lokasjonsstrekkoder</a>
     <a class="muted-link" style="opacity:.55;pointer-events:none">Verktøyadministrasjon (kommer)</a>
   </nav>
 
