feat: mobile location scan selects location and shows contents

--- a/public/mobile.html
+++ b/public/mobile.html
@@ -26,6 +26,7 @@
       <div style="display:flex;gap:8px;margin-top:4px;align-items:center">
         <select id="loc-select" style="flex:1"></select>
         <button id="scan-loc" class="btn" style="flex:0 0 auto">Skann lokasjon</button>
+  <button id="view-loc" class="btn" style="flex:0 0 auto">Innhold</button>
       </div>
 
       <div style="display:flex;gap:8px;margin-top:12px;flex-wrap:wrap">
@@ -72,6 +73,11 @@
       <div style="margin-top:16px">
         <h3 style="margin:0 0 4px 0;font-size:16px">Logg</h3>
         <div id="last-scan" style="font-size:13px;color:#333">Ingen</div>
+      </div>
+
+      <div style="margin-top:16px">
+        <h3 style="margin:0 0 4px 0;font-size:16px">Lokasjonsinnhold</h3>
+        <div id="loc-contents" class="muted" style="font-size:13px">Ingen lokasjon valgt</div>
       </div>
 
       <div style="margin-top:12px">
