style: improved mobile scanner centering + visual guide

--- a/public/mobile.html
+++ b/public/mobile.html
@@ -38,7 +38,7 @@
       </div>
 
       <div id="scanner-area" style="margin-top:10px">
-        <div id="video" style="aspect-ratio:16/9; background:#000;border-radius:8px;display:flex;align-items:center;justify-content:center;color:#777;font-size:14px">Ingen aktiv skann</div>
+  <div id="video" style="aspect-ratio:16/9; background:#000;border-radius:8px;display:flex;align-items:center;justify-content:center;color:#777;font-size:14px">Ingen aktiv skann<div class="scan-guide"></div></div>
         <div id="scan-status" class="muted" style="margin-top:6px"></div>
       </div>
 
