feat: fixed location dropdown populated from existing locations

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,12 @@
         <label>Min antall</label>
         <input id="part-min" type="number" placeholder="0">
       </div>
+      <div class="col">
+        <label>Fast lokasjon</label>
+        <select id="part-default-loc">
+          <option value="">(Ingen fast lokasjon)</option>
+        </select>
+      </div>
     </div>
     <div class="actions">
       <button id="add-part" class="btn">Legg til del</button>
