feat: mobile landing, receive/issue pages, search endpoint, remove desktop manual scan

--- a/public/index.html
+++ b/public/index.html
@@ -48,15 +48,7 @@
     <div id="parts" class="list"></div>
   </section>
 
-  <section>
-    <h2>Skann inn/ut</h2>
-    <input id="scan-location" placeholder="Lokasjon barcode">
-    <input id="scan-part" placeholder="Delenummer">
-    <input id="scan-qty" type="number" placeholder="Antall" value="1">
-    <button id="scan-in">Inn</button>
-    <button id="scan-out">Ut</button>
-    <div id="scan-result"></div>
-  </section>
+  <!-- Manuell skann fjernet: all bevegelse skjer via mobil skanning -->
 
     <script src="/app.js"></script>
   </div>
