--- a/public/mobile.html
+++ b/public/mobile.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <div class="screen">
-    <h2>PartStore — Mobil</h2>
+  <h2>Mobil Bevegelse</h2>
 
   <div id="main-screen">
       <div class="center">
