feat: add back button to mobile movement page

--- a/public/mobile.html
+++ b/public/mobile.html
@@ -17,7 +17,10 @@
 </head>
 <body>
   <div class="screen">
-  <h2>Mobil Bevegelse</h2>
+    <div style="display:flex;align-items:center;gap:10px;justify-content:space-between">
+      <h2 style="margin:0">Mobil Bevegelse</h2>
+      <a href="/mobile-home.html" class="btn" style="text-decoration:none;font-size:13px;padding:6px 10px;background:#0b6efd;color:#fff">Forside</a>
+    </div>
 
   <div id="main-screen">
       <div class="center">
