--- a/public/home.html
+++ b/public/home.html
@@ -21,6 +21,7 @@
     <a href="/location-barcodes.html">Lokasjonsstrekkoder</a>
     <a class="muted-link" style="opacity:.55;pointer-events:none">Verktøyadministrasjon (kommer)</a>
   </nav>
+  <div id="db-banner" style="display:none;margin:-4px 0 18px 0;padding:10px 14px;border:1px solid #e2e2e2;border-left:4px solid #ff9800;background:#fff8e6;border-radius:6px;font-size:13px;color:#5a4100"></div>
 
   <section class="card-grid">
     <a class="card-link" href="/index.html">
@@ -45,5 +46,23 @@
   <footer class="site">
     WareHouse © 2025 – Internt system. Flere moduler aktiveres fortløpende.
   </footer>
+  <script>
+    fetch('/api/debug/status').then(r=> r.ok ? r.json() : null).then(s => {
+      if(!s) return;
+      const b = document.getElementById('db-banner');
+      if(!b) return;
+      if(s.dbMode === 'SQLite'){
+        b.style.display='block';
+        b.innerHTML = 'Database-modus: <strong>SQLite (midlertidig)</strong>. Data kan forsvinne ved redeploy. Sett opp Postgres for permanent lagring.';
+      } else {
+        // Optional: show postgres status unobtrusively
+        b.style.display='block';
+        b.style.background='#eef9f1';
+        b.style.borderLeftColor='#2e7d32';
+        b.style.color='#1b4d21';
+        b.innerHTML = 'Database-modus: <strong>Postgres</strong>. Parts: '+s.parts+' · Lokasjoner: '+s.locations+' · Beholdning rader: '+s.stock;
+      }
+    }).catch(()=>{});
+  </script>
 </body>
 </html>
