--- a/public/mobile-home.html
+++ b/public/mobile-home.html
@@ -11,14 +11,14 @@
 <body>
   <h2 style="text-align:center;margin-top:4px">Mobil Lager</h2>
   <div class="grid">
-    <a href="/mobile-receive.html" class="action">
+  <a href="/mobile.html#mode=in" class="action">
       <div>
         <h3>Varemottak (INN)</h3>
         <p>Skann inn deler til valgt lokasjon.</p>
       </div>
       <div class="icon">➕</div>
     </a>
-    <a href="/mobile-issue.html" class="action">
+  <a href="/mobile.html#mode=out" class="action">
       <div>
         <h3>Vareuttak (UT)</h3>
         <p>Skann ut deler fra valgt lokasjon.</p>
