--- a/public/mobile.html
+++ b/public/mobile.html
@@ -52,6 +52,7 @@
             <label style="font-size:12px">Del</label>
             <input id="mv-part" readonly style="width:100%;background:#f5f5f5">
           </div>
+          <div id="mv-info" style="font-size:12px;line-height:1.3;background:#f8f9fb;border:1px solid #e2e6ec;padding:8px 10px;border-radius:6px;display:none"></div>
           <div style="display:flex;gap:12px">
             <div style="flex:1">
               <label style="font-size:12px">Antall</label>
