--- a/public/home.html
+++ b/public/home.html
@@ -8,18 +8,15 @@
   <style>body{max-width:1080px;margin:0 auto}</style>
 </head>
 <body>
-  <header class="portal-header">
-    <div>
-      <h1>WareHouse</h1>
-      <div class="tagline">Intern logistikk & lagerplattform</div>
-    </div>
+  <header class="portal-header" style="align-items:center">
+    <img src="/Holship_logo.png" alt="WareHouse" style="height:62px;object-fit:contain;display:block">
+    <div class="tagline">Intern logistikk & lagerplattform</div>
   </header>
 
   <nav class="portal-nav">
     <a href="/home.html" class="active">Hjem</a>
     <a href="/index.html">Part Store</a>
     <a href="/location-barcodes.html">Lokasjonsstrekkoder</a>
-    <a class="muted-link" style="opacity:.55;pointer-events:none">Verktøyadministrasjon (kommer)</a>
   </nav>
   <div id="db-banner" style="display:none;margin:-4px 0 18px 0;padding:10px 14px;border:1px solid #e2e2e2;border-left:4px solid #ff9800;background:#fff8e6;border-radius:6px;font-size:13px;color:#5a4100"></div>
 
@@ -31,16 +28,6 @@
         <div class="card-footer">Åpne →</div>
       </div>
     </a>
-    <div class="app-card card-disabled" aria-disabled="true">
-      <h3>Asset Tracking <span class="badge soon">Planlagt</span></h3>
-      <p>Sporing av utstyr og maskiner på tvers av lokasjoner med historikk og status.</p>
-      <div class="card-footer" style="color:#777">Kommer senere</div>
-    </div>
-    <div class="app-card card-disabled" aria-disabled="true">
-      <h3>Verktøyadministrasjon <span class="badge soon">Planlagt</span></h3>
-      <p>Utlån og retur av verktøy, serviceintervaller og varsler.</p>
-      <div class="card-footer" style="color:#777">Kommer senere</div>
-    </div>
   </section>
 
   <section>
