feat(locations): move location management to dedicated locations.html page

--- a/public/home.html
+++ b/public/home.html
@@ -16,6 +16,7 @@
   <nav class="portal-nav">
     <a href="/home.html" class="active">Hjem</a>
     <a href="/index.html">Part Store</a>
+  <a href="/locations.html">Lokasjoner</a>
     <a href="/location-barcodes.html">Lokasjonsstrekkoder</a>
   </nav>
   <div id="db-banner" style="display:none;margin:-4px 0 18px 0;padding:10px 14px;border:1px solid #e2e2e2;border-left:4px solid #ff9800;background:#fff8e6;border-radius:6px;font-size:13px;color:#5a4100"></div>
