--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,7 @@
     <p><a class="muted-link" href="/home.html" style="font-size:14px">← Til Hjem / Oversikt</a></p>
   <div id="db-banner" style="display:none;margin:-4px 0 14px 0;padding:10px 14px;border:1px solid #e2e2e2;border-left:4px solid #ff9800;background:#fff8e6;border-radius:6px;font-size:13px;color:#5a4100"></div>
 
-  <section>
-    <h2>Registrer lokasjon</h2>
-    <input id="loc-name" placeholder="Navn">
-    <input id="loc-barcode" placeholder="Barcode (f.eks LOC-A1)">
-    <button id="add-loc">Legg til</button>
-    <div id="locations"></div>
-  </section>
+  <!-- Lokasjonsadministrasjon flyttet til locations.html -->
 
   <section>
     <h2>Registrer del</h2>
