chore(home): minor content tweaks

--- a/public/home.html
+++ b/public/home.html
@@ -15,7 +15,7 @@
 
   <nav class="portal-nav">
     <a href="/home.html" class="active">Hjem</a>
-    <a href="/index.html">Part Store</a>
+    <a href="/index.html">Parts</a>
   <a href="/locations.html">Lokasjoner</a>
     <a href="/location-barcodes.html">Lokasjonsstrekkoder</a>
   </nav>
@@ -24,8 +24,8 @@
   <section class="card-grid">
     <a class="card-link" href="/index.html">
       <div class="app-card">
-        <h3>Part Store <span class="badge">Aktiv</span></h3>
-        <p>Registrer lokasjoner, deler, beholdning og få varsler på lavt lager. Mobil skanning inkludert.</p>
+        <h3>Parts <span class="badge">Aktiv</span></h3>
+        <p></p>
         <div class="card-footer">Åpne →</div>
       </div>
     </a>
