chore(home): update Norwegian labels

--- a/public/home.html
+++ b/public/home.html
@@ -15,7 +15,7 @@
 
   <nav class="portal-nav">
     <a href="/home.html" class="active">Hjem</a>
-    <a href="/index.html">Parts</a>
+    <a href="/index.html">Delelager</a>
   <a href="/locations.html">Lokasjoner</a>
     <a href="/location-barcodes.html">Lokasjonsstrekkoder</a>
   </nav>
@@ -24,7 +24,7 @@
   <section class="card-grid">
     <a class="card-link" href="/index.html">
       <div class="app-card">
-        <h3>Parts <span class="badge">Aktiv</span></h3>
+        <h3>Delelager <span class="badge">Aktiv</span></h3>
         <p></p>
         <div class="card-footer">Åpne →</div>
       </div>
