--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>WareHouse - Part Store</title>
+  <title>Holship Norge AS - Delelager</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
   <div class="container">
-    <h1>Part Store</h1>
+    <h1>Delelager</h1>
     <p><a class="muted-link" href="/home.html" style="font-size:14px">← Til Hjem / Oversikt</a></p>
   <div id="db-banner" style="display:none;margin:-4px 0 14px 0;padding:10px 14px;border:1px solid #e2e2e2;border-left:4px solid #ff9800;background:#fff8e6;border-radius:6px;font-size:13px;color:#5a4100"></div>
 
