feat(portal): add mobile scanning shortcut card

--- a/public/home.html
+++ b/public/home.html
@@ -29,6 +29,13 @@
         <div class="card-footer">Åpne →</div>
       </div>
     </a>
+    <a class="card-link" href="/mobile-home.html">
+      <div class="app-card" style="background:linear-gradient(135deg,#0d47a1,#1976d2);color:#fff">
+        <h3 style="color:#fff">Mobil Skanning</h3>
+        <p style="color:#e3f2fd;font-size:13px">Åpne mobilgrensesnitt for inn/ut skanning</p>
+        <div class="card-footer" style="color:#fff">Start →</div>
+      </div>
+    </a>
   </section>
 
   <section>
