feat(transactions): show and filter by username in log

--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,7 @@
     <div style="display:flex;gap:8px;flex-wrap:wrap;margin-bottom:8px">
       <input id="log-filter-part" placeholder="Filter delenummer" style="flex:1;min-width:160px">
       <input id="log-filter-loc" placeholder="Filter lokasjon" style="flex:1;min-width:160px">
+  <input id="log-filter-user" placeholder="Filter bruker" style="flex:1;min-width:140px">
       <select id="log-limit" style="width:120px">
         <option value="50">50</option>
         <option value="100">100</option>
