chore(mobile): update heading text on mobile-home

--- a/public/mobile-home.html
+++ b/public/mobile-home.html
@@ -9,7 +9,7 @@
   </style>
 </head>
 <body>
-  <h2 style="text-align:center;margin-top:4px">Mobil Lager</h2>
+  <h2 style="text-align:center;margin-top:4px">Mobil Scan</h2>
   <div class="grid">
   <a href="/mobile.html#mode=in" class="action">
       <div>
